add jcstress and jmh